@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[104] --> Fix quest The Ring of Blood: The Final Challenge (Nagrand Arena).
 [103] --> Fix Zul'drak arena.
 [102] --> Scripts/BlackTemple: Fix Illidan.
 [101] --> Fix Bonus 4P T10 Rogue.
